--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,5 +1,5 @@
 /* CBUH - Global Theme Configuration */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     /* Color Palette - Vinotinto Theme */
@@ -23,7 +23,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
 }
 
 /* Custom Scrollbar */
